@@ -1,16 +1,22 @@
 AC_PREREQ(2.61)
 AC_INIT(fpac, 3.27.16, f6bvp@free.fr)
 AM_INIT_AUTOMAKE([-Wall -Werror dist-bzip2])
+AC_CONFIG_HEADER([config.h])
+AC_CONFIG_SRCDIR([pathnames.h])
 
-AC_CONFIG_HEADERS([config.h])
+# Determine versions for package managers.
+basever=$(echo $PACKAGE_VERSION | sed -e 's@-.*$@@')
+AC_SUBST(BASEVERSION, [$basever])
+extraver=$(echo $PACKAGE_VERSION | sed -e 's@'$basever'@@' -e 's@^-@_@')
+AC_SUBST(EXTRAVERSION, [$extraver])
 
-dnl Checks for programs.
+# Checks for programs.
 AC_PROG_CC
 AC_PROG_GCC_TRADITIONAL
 AC_PROG_INSTALL
 AC_PROG_RANLIB
 
-dnl Checks for libraries.
+# Checks for libraries.
 AC_SUBST(AX25_LIB)
 AC_SUBST(NCURSES_LIB)
 AC_SUBST(MATH_LIB)
@@ -18,13 +24,13 @@ AC_CHECK_LIB(ax25, ax25_config_load_ports, AX25_LIB="-lax25", AC_MSG_ERROR([Coul
 AC_CHECK_LIB(ncurses, initscr, NCURSES_LIB="-lncurses", AC_MSG_ERROR([Could not find the ncurses libraries; aborting]))
 AC_CHECK_LIB(m, cos, MATH_LIB="-lm", AC_MSG_ERROR([Could not find the math libraries; aborting]))
 
-dnl Checks for header files.
+# Checks for header files.
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
 AC_CHECK_HEADERS([assert.h ctype.h errno.h malloc.h netdb.h paths.h signal.h stdlib.h string.h syslog.h termios.h unistd.h utmp.h sys/fcntl.h sys/file.h sys/io.h sys/ioctl.h sys/ipc.h sys/mman.h sys/param.h sys/socket.h sys/stat.h sys/time.h sys/un.h sys/utsname.h sys/types.h arpa/inet.h net/ethernet.h net/if.h net/if_arp.h netinet/in.h netinet/ip_icmp.h netinet/ip.h linux/if_ether.h])
 
-dnl Checks for working glibc 2.1 headers
+# Checks for working glibc 2.1 headers
 AC_MSG_CHECKING(for working netax25/ax25.h header file)
 AC_EGREP_HEADER(ax25_fwd_struct, netax25/ax25.h, has_ax25=yes, has_ax25=no)
 if test "$has_ax25" = "yes" ; then
@@ -35,7 +41,7 @@ else
 fi
 AM_CONDITIONAL([AX25_H], [test "$has_ax25" = "yes"])
 
-dnl Checks for typedefs, structures, and compiler characteristics.
+# Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_TYPE_OFF_T
 AC_TYPE_PID_T
@@ -43,7 +49,7 @@ AC_TYPE_SIGNAL
 AC_STRUCT_TM
 AC_HEADER_TIME
 
-dnl Checks for library functions.
+# Checks for library functions.
 AC_FUNC_CHOWN
 AC_FUNC_CLOSEDIR_VOID
 AC_FUNC_FORK
@@ -58,5 +64,5 @@ AC_FUNC_VPRINTF
 AC_CHECK_FUNCS(alarm dup2 gethostbyaddr gethostname gettimeofday inet_ntoa memchr memove memset mkdir munmap putenv select setenv socket sqrt strcasecmp strchar strcspn strdup strerror strncasecmp strpbrk strrchr strspn strstr strtol strtoul uname)
 
 
-AC_CONFIG_FILES([Makefile lib/Makefile cfg/Makefile monitor/Makefile node/Makefile flex/Makefile pad/Makefile tcp/Makefile wp/Makefile kiss/Makefile tools/Makefile stats/Makefile doc/Makefile doc/html/Makefile help/Makefile scripts/versions:scripts/versions.in scripts/fpac.sh:scripts/fpac.in scripts/Makefile etc/Makefile])
+AC_CONFIG_FILES([Makefile lib/Makefile cfg/Makefile monitor/Makefile node/Makefile flex/Makefile pad/Makefile tcp/Makefile wp/Makefile kiss/Makefile tools/Makefile stats/Makefile doc/Makefile doc/html/Makefile help/Makefile scripts/versions:scripts/versions.in scripts/fpac.sh:scripts/fpac.in scripts/Makefile etc/Makefile fpac.spec])
 AC_OUTPUT
